Fixed footer copy link because it was redirected

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </p>
 
       <p>
-        <a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a>
+        <a href="https://game-icons.net/1x1/lorc/dove.html">Dove icon</a>
         by Lorc.
       </p>
     </footer>
